# oop_lab3

./: CMakeLists.txt
examples/: create_company.ls  demo.ls
src/app/: db.hpp  main.cpp  queries.hpp  shell_api.hpp
src/app/model/: Base.hpp  Company.hpp  Employee.cpp  Employee.hpp  hierarchy.cpp  hierarchy.h  utils.h
src/shell/: api.h
src/shell/interpreter/: ApiCore.hpp  EmptyObject.cpp  Function.hpp  Interpreter.cpp  Interpreter.h  Object.hpp  templ_utils.hpp
src/shell/lib/: builtins.cpp  builtins.h  utils.h
src/shell/parser/: tokenization.h  tokenize.cpp
src/shell/parser/grammar/: AssignmentToken.hpp  BraceToken.hpp  FunctionCall.hpp  NameToken.hpp  NumberLiteral.hpp  Statement.hpp  StringLiteral.hpp  Variable.hpp  expressions.h  expressions.hpp  meta.hpp  parse.cpp  parse.h  parse.hpp
src/shell/parser/tokens/: AssignmentToken.hpp  NameToken.hpp  NumberLiteralToken.hpp  ParenthesisToken.hpp  StringLiteralToken.hpp  meta.cpp  meta.hpp
tests/: utils.h
tests/app/: TestDB.h  TestHierarchyTraversing.h  TestModels.h
tests/shell/: TestDynamicTypes.h  TestObjectToString.h  TestShellFunctions.h
tests/shell/grammar/: TestAssignmentToken.h  TestFunctionCall.h  TestTokensMeta.h  TestTokensParsing.hpp
tests/shell/tokens/: TestAssignmentToken.h  TestNameToken.h  TestNumberLiteralToken.h  TestParenthesisToken.h  TestStringLiteralToken.h  TestTokenizing.h  TestTokensMeta.h
